signoff no longer comically huge on mobile

--- a/css/style.less
+++ b/css/style.less
@@ -215,6 +215,10 @@ Linearise it!
         font-size:0.75em;
     }
 
+    .signoff{
+        font-size:1em;
+    }
+
     #header{
         font-size:4em;
     }
